--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -5,6 +5,7 @@
   padding: 15px 0px;
   font-size: 18px;
   margin-bottom: 5px;
+  margin-top: -15px;
 }
 #friends-display-link i {
   color: var(--border-opacitive);
@@ -12,4 +13,16 @@
 
 .friends-screen {
   padding: 0px var(--horizontal-space);
+}
+.friends-screen__channel {
+  margin-top: 25px;
+  border-top: var(--main-border);
+  padding-top: 15px;
+}
+
+.friends-screen__channel-header {
+  margin-bottom: 30px;
+  display: flex;
+  justify-content: space-between;
+  color: rgba(0, 0, 0, 0.5);
 }
