--- a/css/styles.css
+++ b/css/styles.css
@@ -6,12 +6,20 @@
 @import "./components/nav-bar.css";
 @import "./components/screen-header.css";
 @import "./components/user-component.css";
+@import "./components/badge.css";
+@import "./components/icon-row.css";
 
 /* screens css */
 @import "./screens/login.css";
 @import "./screens/friends.css";
+@import "./screens/find.css";
+@import "./screens/more.css";
 
 body {
   font-family: "메이플스토리";
   color: var(--black);
+}
+
+.main-screen {
+  padding: 0px var(--horizontal-space);
 }
